fix: settings field label alignment

--- a/src/containers/SettingsEditor/SettingsEditor.sass
+++ b/src/containers/SettingsEditor/SettingsEditor.sass
@@ -97,6 +97,7 @@ $field-gap: 8px
       padding-left: 4px
       cursor: pointer
       user-select: none
+      align-self: flex-start
 
       &.studio
         color: var(--color-hl-studio)
